# Go

./: .gitignore  Go.cabal  Go.hs  Main.hs  Net.hs  README  UI.hs
Net/: Parser.hs
src/: Control.hs  Main.hs  Net.hs  UI.hs
src/Net/: Parser.hs
